--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ layout: layout_about
     <h1 class="project-name">Who Manages This Site?</h1>
     <br>
     <div class="self-image">
-        <img src="Images/Selfie.JPG" alt="The Maker">
+        <img src="/ProdiginousCreations/Images/Selfie.JPG" alt="The Maker">
     </div>
     <br>
     <div class="about-me">
