--- a/welcome.html
+++ b/welcome.html
@@ -3,12 +3,13 @@ layout: layout_welcome
 ---
 
 <div class="welcome">
+    <a><img src="Images/Website-Intro.png" alt="Prodiginous Creations"></a>
     <button class="welcome-button" onclick="proceed">Continue</button>
 </div>
 
 <script>
     function proceed(){
-        window.location.href = "index.html";
+        window.location.href = "/index.html";
     }
 </script>
 
