--- a/welcome.html
+++ b/welcome.html
@@ -2,14 +2,13 @@
 layout: layout_welcome
 ---
 
-<div class="welcome">
-    <a><img src="Images/Website-Intro.png" alt="Prodiginous Creations"></a>
+<div class="welcome" id="welcome-image">
     <button class="welcome-button" onclick="proceed">Continue</button>
 </div>
 
 <script>
     function proceed(){
-        window.location.href = "/index.html";
+        window.location.href = "http://vieck.github.io/ProdiginousCreations/index.html";
     }
 </script>
 
