css doesn't work?

--- a/welcome.html
+++ b/welcome.html
@@ -2,8 +2,11 @@
 layout: layout_welcome
 ---
 
-<div class="welcome" id="welcome-image">
+<div class="wrapper">
     <button class="welcome-button" onclick="proceed">Continue</button>
+    <div id="image">
+
+    </div>
 </div>
 
 <script>
