Updated size of image

--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@ layout: layout_welcome
 
 <div class="wrapper">
     <div id="image">
-        <img id="welcome-image" src="Images/Website-Intro.png"/>
+        <a><img id="welcome-image" src="Images/Website-Intro.png"/></a>
     </div>
 </div>
 
