--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@ layout: layout_welcome
 
 <div class="wrapper">
     <div id="image">
-        <a><img id="welcome-image" src="Images/Website-Intro.png"/></a>
+        <a><img style="max-width: 100%; max-height: 100%" id="welcome-image" src="Images/Website-Intro.png"/></a>
     </div>
 </div>
 
